{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 602,
  "lineage": "131c3123-515a-38b0-219c-4582bfc8cd07",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "my_public_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-096cad4adc40fd438",
            "arn": "arn:aws:ec2:ap-south-1:209479265154:elastic-ip/eipalloc-096cad4adc40fd438",
            "domain": "vpc",
            "id": "eipalloc-096cad4adc40fd438",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-15-206-50-155.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.206.50.155",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.my_internet_gtw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b52033d797da0c87",
            "arn": "arn:aws:ec2:ap-south-1:209479265154:instance/i-053940eea69576469",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-053940eea69576469",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "my_pvt_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0da7198a32cc91dad",
            "private_dns": "ip-10-0-3-234.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.234",
            "public_ip": "65.0.6.113",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ed2b2c92840be32a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-07f901e10eced05bb",
              "sg-0caa1ea877bc42de1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-048494545672ac57a",
            "tags": {
              "Name": "imazy-web-default"
            },
            "tags_all": {
              "Name": "imazy-web-default"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07f901e10eced05bb",
              "sg-0caa1ea877bc42de1"
            ]
          },
          "dependencies": [
            "aws_key_pair.my_key_pair",
            "aws_security_group.my_http_sg",
            "aws_security_group.my_ssh_sg",
            "aws_subnet.my_public_subnet",
            "aws_vpc.my_vpc",
            "data.aws_ami.my_ami",
            "data.aws_availability_zones.my_available_zones",
            "tls_private_key.my_pvt_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_internet_gtw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:209479265154:internet-gateway/igw-0797052449d8be4b0",
            "id": "igw-0797052449d8be4b0",
            "owner_id": "209479265154",
            "vpc_id": "vpc-08f8afd54a92c8ce6"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my_net_gtw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-096cad4adc40fd438",
            "association_id": "eipassoc-08398c3422ffac975",
            "connectivity_type": "public",
            "id": "nat-0ac4c185f7b21bb88",
            "network_interface_id": "eni-02a8c04b6326d5ad6",
            "private_ip": "10.0.3.176",
            "public_ip": "15.206.50.155",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-048494545672ac57a"
          },
          "dependencies": [
            "aws_eip.my_public_eip",
            "aws_internet_gateway.my_internet_gtw",
            "aws_subnet.my_public_subnet",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.my_available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:209479265154:route-table/rtb-0309cbe67110d7302",
            "id": "rtb-0309cbe67110d7302",
            "owner_id": "209479265154",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ac4c185f7b21bb88",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08f8afd54a92c8ce6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.my_public_eip",
            "aws_internet_gateway.my_internet_gtw",
            "aws_nat_gateway.my_net_gtw",
            "aws_subnet.my_public_subnet",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.my_available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:209479265154:route-table/rtb-0e2ef6eddac6f1ebf",
            "id": "rtb-0e2ef6eddac6f1ebf",
            "owner_id": "209479265154",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0797052449d8be4b0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08f8afd54a92c8ce6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_internet_gtw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_route_table_asc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-01",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0575d350709fa338d",
            "route_table_id": "rtb-0e2ef6eddac6f1ebf",
            "subnet_id": "subnet-048494545672ac57a"
          },
          "dependencies": [
            "aws_internet_gateway.my_internet_gtw",
            "aws_route_table.my_public_route",
            "aws_subnet.my_public_subnet",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.my_available_zones"
          ]
        },
        {
          "index_key": "public-02",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0786e19ab3008fdfe",
            "route_table_id": "rtb-0e2ef6eddac6f1ebf",
            "subnet_id": "subnet-0c1290965adaeaf94"
          },
          "dependencies": [
            "aws_internet_gateway.my_internet_gtw",
            "aws_route_table.my_public_route",
            "aws_subnet.my_public_subnet",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.my_available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_http_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:209479265154:security-group/sg-0caa1ea877bc42de1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0caa1ea877bc42de1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250401110938306600000001",
            "name_prefix": "terraform-",
            "owner_id": "209479265154",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08f8afd54a92c8ce6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_ssh_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:209479265154:security-group/sg-07f901e10eced05bb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07f901e10eced05bb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20250401110938312300000002",
            "name_prefix": "terraform-",
            "owner_id": "209479265154",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08f8afd54a92c8ce6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:209479265154:subnet/subnet-0679c6b21d36ae168",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0679c6b21d36ae168",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "209479265154",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-08f8afd54a92c8ce6"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-01",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:209479265154:subnet/subnet-048494545672ac57a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048494545672ac57a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "209479265154",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "imazy-public-01",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "imazy-public-01",
              "terraform": "true"
            },
            "vpc_id": "vpc-08f8afd54a92c8ce6"
          },
          "dependencies": [
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.my_available_zones"
          ]
        },
        {
          "index_key": "public-02",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:209479265154:subnet/subnet-0c1290965adaeaf94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1290965adaeaf94",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "209479265154",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "imazy-public-02",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "imazy-public-02",
              "terraform": "true"
            },
            "vpc_id": "vpc-08f8afd54a92c8ce6"
          },
          "dependencies": [
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.my_available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:209479265154:vpc/vpc-08f8afd54a92c8ce6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02254a08d66019e05",
            "default_route_table_id": "rtb-0e8eb9466858410c0",
            "default_security_group_id": "sg-0daaef386d92bd875",
            "dhcp_options_id": "dopt-034dbb925f3864a42",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08f8afd54a92c8ce6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e8eb9466858410c0",
            "owner_id": "209479265154"
          }
        }
      ]
    }
  ]
}